--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <div class="mynav">Blog</div>
             </nav>
         </header>
+        <div class="myloading">
+            <img src="/spinner.gif" alt="">
+        </div>
         <div class="photo-pro">
             <div class="left">
                 <img id="left-img" src="./img/myimg.jpeg" alt="Loading...">
