--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
         <div class="myloading">
-            <img src="/spinner.gif" alt="">
+            <img src="./img/spinner.gif" alt="">
         </div>
         <div class="photo-pro">
             <div class="left">
