--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/4a04fb0e26.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    </head>
+</head>
 
 <body>
     <main class="main-tag">
@@ -31,8 +31,9 @@
             <div class="right">
                 <h4>I'm</h4>
                 <h1>Sanjay Kumar Singh</h1>
-                <h6>Front-End Developer</h6>
-                <a id="download-resume" href="Resume M.pdf" download="resume/5685/nbjierri/-sanjay"><button class="download-btn" for="download-resume">Download
+                <h6>Full-Stack Developer</h6>
+                <a id="download-resume" href="full_stack.pdf" download="resume/5685/nbjierri/-sanjay"><button
+                        class="download-btn" for="download-resume">Download
                         CV</button></a>
             </div>
         </div>
@@ -48,7 +49,7 @@
                     <img src="./img/Picsart.jpg" alt="">
                 </div>
                 <div class="colonm2">
-                    <h1>Front-End Developer</h1>
+                    <h1>Full-Stack Developer</h1>
                     <p>I am Sanjay Kumar Singh(final year student), from Mirzapur, Uttar Pradesh. I am presently
                         pursuing
                         Bachelor of Technology in Computer Science and Engineering, Faculty of Engineering &
@@ -169,16 +170,6 @@
                     </div>
                     <input type="range" min="1" max="100" value="50" disabled>
                 </div>
-            </div>
-            <div class="right-side">
-
-                <div class="myskills">
-                    <div class="skills">
-                        <h6 class="text-heading-small">Reactjs</h6>
-                        <h6 class="text-heading-small">60%</h6>
-                    </div>
-                    <input type="range" min="1" max="100" value="60" disabled>
-                </div>
                 <div class="myskills">
                     <div class="skills">
                         <h6 class="text-heading-small">BootStrap</h6>
@@ -193,12 +184,50 @@
                     </div>
                     <input type="range" min="1" max="100" value="75" disabled>
                 </div>
+            </div>
+            <div class="right-side">
+                <div class="myskills">
+                    <div class="skills">
+                        <h6 class="text-heading-small">Reactjs</h6>
+                        <h6 class="text-heading-small">75%</h6>
+                    </div>
+                    <input type="range" min="1" max="100" value="75" disabled>
+                </div>
+                <div class="myskills">
+                    <div class="skills">
+                        <h6 class="text-heading-small">Nodejs</h6>
+                        <h6 class="text-heading-small">60%</h6>
+                    </div>
+                    <input type="range" min="1" max="100" value="60" disabled>
+                </div>
+                <div class="myskills">
+                    <div class="skills">
+                        <h6 class="text-heading-small">Expressjs</h6>
+                        <h6 class="text-heading-small">65%</h6>
+                    </div>
+                    <input type="range" min="1" max="100" value="65" disabled>
+                </div>
+                <div class="myskills">
+                    <div class="skills">
+                        <h6 class="text-heading-small">MongoDB</h6>
+                        <h6 class="text-heading-small">90%</h6>
+                    </div>
+                    <input type="range" min="1" max="100" value="90" disabled>
+                </div>
+
                 <div class="myskills">
                     <div class="skills">
                         <h6 class="text-heading-small">mySQL</h6>
                         <h6 class="text-heading-small">70%</h6>
                     </div>
                     <input type="range" min="1" max="100" value="70" disabled>
+                </div>
+                <div class="myskills">
+                    <div class="skills">
+                        <h6 class="text-heading-small">API(JSON, REST)</h6>
+                        <h6 class="text-heading-small">80%</h6>
+                    </div>
+                    <input type="range" min="1" max="100" value="80" disabled>
                 </div>
             </div>
         </div>
@@ -346,35 +375,41 @@
         </div>
 
 
-    <footer>
-        <div class="myfooter">
-            <div class="items">
-                <a id="linkedin-link" href="https://www.linkedin.com/in/sanjay-kumar-singh-844a62222/"><i
-                        class="fa-brands fa-linkedin-in" for="my-link"></i></a>
-                <a href="https://github.com/sanjay892000" id="github-link"><i class="fa-brands fa-github" for="github-link"></i></a>
-                <a id="facebookk-link" href="https://www.facebook.com/profile.php?id=100010363560624"><i
-                        class="fa-brands fa-facebook-f" for="facebookk-link"></i></a>
-                <a id="insta-link" href="https://www.instagram.com/sanjay_kumar_singh._/"><i class="fa-brands fa-instagram" for="insta-link"></i></a>
+        <footer>
+            <div class="myfooter">
+                <div class="items">
+                    <a id="linkedin-link" href="https://www.linkedin.com/in/sanjay-kumar-singh-844a62222/"><i
+                            class="fa-brands fa-linkedin-in" for="my-link"></i></a>
+                    <a href="https://github.com/sanjay892000" id="github-link"><i class="fa-brands fa-github"
+                            for="github-link"></i></a>
+                    <a id="facebookk-link" href="https://www.facebook.com/profile.php?id=100010363560624"><i
+                            class="fa-brands fa-facebook-f" for="facebookk-link"></i></a>
+                    <a id="insta-link" href="https://www.instagram.com/sanjay_kumar_singh._/"><i
+                            class="fa-brands fa-instagram" for="insta-link"></i></a>
+                </div>
+                <div class="terms-cond">
+                    <a href="#">Privacy</a>
+                    <p>|</p>
+                    <a href="#">Terms</a>
+                    <p>|</p>
+                    <a href="#">FAQs</a>
+                    <p>|</p>
+                    <a href="#">Help</a>
+                </div>
+                <div class="developer-name">
+                    <p>This Page created by <span>Sanjay Kumar Singh</span></p>
+                </div>
             </div>
-            <div class="terms-cond">
-                <a href="#">Privacy</a>
-                <p>|</p>
-                <a href="#">Terms</a>
-                <p>|</p>
-                <a href="#">FAQs</a>
-                <p>|</p>
-                <a href="#">Help</a>
-            </div>
-            <div class="developer-name">
-                <p>This Page created by <span>Sanjay Kumar Singh</span></p>
-            </div>
-        </div>
-    </footer>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        </footer>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+        integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
-   </body>
+</body>
 
 </html>
