--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h4>I'm</h4>
                 <h1>Sanjay Kumar Singh</h1>
                 <h6>Full-Stack Developer</h6>
-                <a id="download-resume" href="full_stack.pdf" download="resume/5685/nbjierri/-sanjay"><button
+                <a id="download-resume" href="full_stack.pdf" download="resume"><button
                         class="download-btn" for="download-resume">Download
                         CV</button></a>
             </div>
