--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
         </div>
 
         <div class="container">
-            <div class="portfolio">
-                <div class="colonm1">
-                    <img src="./img/Picsart.jpg" alt="">
-                </div>
-                <div class="colonm2">
-                    <h1>Full-Stack Developer</h1>
-                    <p>I am Sanjay Kumar Singh(final year student), from Mirzapur, Uttar Pradesh. I am presently
-                        pursuing
-                        Bachelor of Technology in Computer Science and Engineering, Faculty of Engineering &
+            <div class="top-webdevel">
+                <h1>Full-Stack Developer</h1>
+                    <p>I am Sanjay Kumar Singh(Full-Stack Developer), from Mirzapur, Uttar Pradesh. I have done Bachelor of Technology in Computer Science and Engineering, Faculty of Engineering &
                         Technology,
-                        University of Lucknow. Moreover, I am proficient as well as a capable and confident person.
+                        University of Lucknow, Lucknow in 2024. Moreover, I am proficient as well as a capable and confident person.
                         I
                         have
                         learned to be very hard-working as well as passionate about my career from the very core.
                         Since
                         my
                         childhood, I have always been trained to focus on my passion.</p>
+            </div>
+            <div class="portfolio">
+                <div class="colonm1">
+                    <img src="./img/Picsart.jpg" alt="">
+                </div>
+                <div class="colonm2">
                     <div class="table">
                         <div class="table-left">
                             <p>Name: <span>Sanjay Kumar Singh</span></p>
@@ -240,40 +240,38 @@
         <div class="full-page">
             <div class="left-side">
                 <div class="project">
+                    <img src="./img/mynotebook.png" alt="Loading">
+                    <div class="project-details">
+                        <h5>My Notebook</h5>
+                        <p>This web is based on MERN Stack.This is an online web platform where you can create, edit, upload, delete your notes/information privately and securely without any disturbancee.</p>
+                    </div>
+                </div>
+
+                <div class="project">
                     <img src="./img/portfolio p.png" alt="Loading">
                     <div class="project-details">
                         <h5>Portfolio Website</h5>
                         <p>A sleek and visually captivating portfolio website showcasing my expertise through a curated
-                            display of projects and a comprehensive resume. Engaging design, intuitive navigation, and
-                            clear calls-to-action create a professional online presence that highlights my skills and
-                            accomplishments.</p>
+                            display of projects and a comprehensive resume.</p>
                     </div>
                 </div>
-                <div id="my-notebook" class="project">
-                    <img src="./img/mynotebook.webp" alt="Loading">
-                    <div class="project-details">
-                        <h5>My Notebook</h5>
-                        <p>In My Notebook app, you can save and delete your notes. This app is create with the help of
-                            ReactJS</p>
-                    </div>
-                </div>
-
             </div>
             <div class="right-side">
                 <div class="project">
-                    <img id="news-app-img" src="./img/newsapp.png" alt="Loading">
+                    <img src="./img/ecom.png" alt="Loading">
+                    <div class="project-details">
+                        <h5>Prabhat Center (E-commerce Website)</h5>
+                        <p>With the help of Weather App you can know about the current weather. Like when and on which
+                            day is it likely to rain, what is the temperature etc.</p>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img src="./img/newsapp.png" alt="Loading">
                     <div class="project-details">
                         <h5>Prabhat News App</h5>
                         <p>In My Notebook app, you can read news of any category. This app is also create with the help
                             of API</p>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="./img/Weather.png" alt="Loading">
-                    <div class="project-details">
-                        <h5>Weather App</h5>
-                        <p>With the help of Weather App you can know about the current weather. Like when and on which
-                            day is it likely to rain, what is the temperature etc.</p>
                     </div>
                 </div>
             </div>
@@ -378,13 +376,13 @@
         <footer>
             <div class="myfooter">
                 <div class="items">
-                    <a id="linkedin-link" href="https://www.linkedin.com/in/sanjay-kumar-singh-844a62222/"><i
+                    <a id="linkedin-link" href="https://www.linkedin.com/in/sanjay892000/"><i
                             class="fa-brands fa-linkedin-in" for="my-link"></i></a>
                     <a href="https://github.com/sanjay892000" id="github-link"><i class="fa-brands fa-github"
                             for="github-link"></i></a>
                     <a id="facebookk-link" href="https://www.facebook.com/profile.php?id=100010363560624"><i
                             class="fa-brands fa-facebook-f" for="facebookk-link"></i></a>
-                    <a id="insta-link" href="https://www.instagram.com/sanjay_kumar_singh._/"><i
+                    <a id="insta-link" href="https://www.instagram.com/sanjay_singh.15/"><i
                             class="fa-brands fa-instagram" for="insta-link"></i></a>
                 </div>
                 <div class="terms-cond">
