--- a/index.html
+++ b/index.html
@@ -261,8 +261,7 @@
                     <img src="./img/ecom.png" alt="Loading">
                     <div class="project-details">
                         <h5>Prabhat Center (E-commerce Website)</h5>
-                        <p>With the help of Weather App you can know about the current weather. Like when and on which
-                            day is it likely to rain, what is the temperature etc.</p>
+                        <p>This project aims to develop a robust e-commerce platform that enhances user experience through seamless navigation, secure transactions, and a wide range of products. Our goal is to provide an accessible and efficient online shopping experience for customers.</p>
                     </div>
                 </div>
 
@@ -270,8 +269,7 @@
                     <img src="./img/newsapp.png" alt="Loading">
                     <div class="project-details">
                         <h5>Prabhat News App</h5>
-                        <p>In My Notebook app, you can read news of any category. This app is also create with the help
-                            of API</p>
+                        <p>This project delivers timely and comprehensive news coverage, offering readers up-to-date information on global and local events with ease of access and reliable reporting.</p>
                     </div>
                 </div>
             </div>
