project link add

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="full-page">
             <div class="left-side">
                 <div class="project">
-                    <img src="./img/mynotebook.png" alt="Loading">
+                    <img id="mynotebook" src="./img/mynotebook.png" alt="Loading">
                     <div class="project-details">
                         <h5>My Notebook</h5>
                         <p>This web is based on MERN Stack.This is an online web platform where you can create, edit, upload, delete your notes/information privately and securely without any disturbancee.</p>
@@ -248,7 +248,7 @@
                 </div>
 
                 <div class="project">
-                    <img src="./img/portfolio p.png" alt="Loading">
+                    <img id="portfolio" src="./img/portfolio p.png" alt="Loading">
                     <div class="project-details">
                         <h5>Portfolio Website</h5>
                         <p>A sleek and visually captivating portfolio website showcasing my expertise through a curated
@@ -258,7 +258,7 @@
             </div>
             <div class="right-side">
                 <div class="project">
-                    <img src="./img/ecom.png" alt="Loading">
+                    <img id="ecommerce" src="./img/ecom.png" alt="Loading">
                     <div class="project-details">
                         <h5>Prabhat Center (E-commerce Website)</h5>
                         <p>This project aims to develop a robust e-commerce platform that enhances user experience through seamless navigation, secure transactions, and a wide range of products. Our goal is to provide an accessible and efficient online shopping experience for customers.</p>
@@ -266,7 +266,7 @@
                 </div>
 
                 <div class="project">
-                    <img src="./img/newsapp.png" alt="Loading">
+                    <img id="newsapp" src="./img/newsapp.png" alt="Loading">
                     <div class="project-details">
                         <h5>Prabhat News App</h5>
                         <p>This project delivers timely and comprehensive news coverage, offering readers up-to-date information on global and local events with ease of access and reliable reporting.</p>
