--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="mybtnc">
-                        <button class="table-btn">Hire Me</button>
+                        <button id="hireMe" class="table-btn">Hire Me</button>
                     </div>
                 </div>
             </div>
@@ -357,11 +357,11 @@
         <div class="container">
             <div class="contact">
                 <div class="mail-name">
-                    <input type="text" min="1" max="30" placeholder="Your Name">
-                    <input type="email" min="1" max="30" placeholder="Your Email">
+                    <input id="inputname" type="text" min="1" max="30" placeholder="Your Name">
+                    <input id="inputemail" type="email" min="1" max="30" placeholder="Your Email">
                 </div>
                 <div class="subject">
-                    <input type="text" placeholder="Subject">
+                    <input id="inputsubject" type="text" placeholder="Subject">
                 </div>
                 <div class="massage">
                     <textarea name="text" id="massage" cols="30" rows="5" placeholder="Massage"></textarea>
