--- a/index.html
+++ b/index.html
@@ -356,19 +356,19 @@
             <h3>CONTACT ME</h3>
         </div>
         <div class="container">
-            <div class="contact">
+            <form class="contact">
                 <div class="mail-name">
-                    <input id="inputname" type="text" min="1" max="30" placeholder="Your Name">
+                    <input id="inputname" type="text" min="1" max="30" placeholder="Your Name" >
                     <input id="inputemail" type="email" min="1" max="30" placeholder="Your Email">
                 </div>
                 <div class="subject">
-                    <input id="inputsubject" type="text" placeholder="Subject">
+                    <input id="inputsubject" type="text" placeholder="Subject" >
                 </div>
                 <div class="massage">
                     <textarea name="text" id="massage" cols="30" rows="5" placeholder="Massage"></textarea>
                 </div>
                 <button class="table-btn">Send Massage</button>
-            </div>
+            </form>
         </div>
 
 
