add hearts emozi

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <p>Birthday: <span>08/09/2000</span></p>
                             <p>Email: <span>sanjay892000@gmail.com</span></p>
                             <p>Company: <span>Hanumant Technology</span></p>
-                            <p>Experience: <span>1 Year</span></p>
+                            <p>Experience: <span>1+ Years</span></p>
                             <p>Freelance: <span>Available</span></p>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
         </div>
         <div class="stroke-heading-large">
             <h1 class="quality-heading">QUALITY</h1>
-            <h3>EDUCATION & EXPERICENCE</h3>
+            <h3>EDUCATION & EXPERIENCE</h3>
         </div>
         <div class="full-page">
             <div class="education">
@@ -145,17 +145,10 @@
             <div class="left-side">
                 <div class="myskills">
                     <div class="skills">
-                        <h6 class="text-heading-small">Java</h6>
-                        <h6 class="text-heading-small">75%</h6>
-                    </div>
-                    <input type="range" min="1" max="100" value="75" disabled>
-                </div>
-                <div class="myskills">
-                    <div class="skills">
                         <h6 class="text-heading-small">HTML</h6>
-                        <h6 class="text-heading-small">80%</h6>
+                        <h6 class="text-heading-small">95%</h6>
                     </div>
-                    <input type="range" min="1" max="100" value="80" disabled>
+                    <input type="range" min="1" max="100" value="95" disabled>
                 </div>
                 <div class="myskills">
                     <div class="skills">
@@ -167,9 +160,9 @@
                 <div class="myskills">
                     <div class="skills">
                         <h6 class="text-heading-small">JavaScript</h6>
-                        <h6 class="text-heading-small">50%</h6>
+                        <h6 class="text-heading-small">60%</h6>
                     </div>
-                    <input type="range" min="1" max="100" value="50" disabled>
+                    <input type="range" min="1" max="100" value="60" disabled>
                 </div>
                 <div class="myskills">
                     <div class="skills">
@@ -185,25 +178,32 @@
                     </div>
                     <input type="range" min="1" max="100" value="75" disabled>
                 </div>
-            </div>
-            <div class="right-side">
                 <div class="myskills">
                     <div class="skills">
-                        <h6 class="text-heading-small">Reactjs</h6>
+                        <h6 class="text-heading-small">React.js</h6>
                         <h6 class="text-heading-small">75%</h6>
                     </div>
                     <input type="range" min="1" max="100" value="75" disabled>
                 </div>
+            </div>
+            <div class="right-side">
+                <!-- <div class="myskills">
+                    <div class="skills">
+                        <h6 class="text-heading-small">React.js</h6>
+                        <h6 class="text-heading-small">75%</h6>
+                    </div>
+                    <input type="range" min="1" max="100" value="75" disabled>
+                </div> -->
                 <div class="myskills">
                     <div class="skills">
-                        <h6 class="text-heading-small">Nodejs</h6>
+                        <h6 class="text-heading-small">Node.js</h6>
                         <h6 class="text-heading-small">60%</h6>
                     </div>
                     <input type="range" min="1" max="100" value="60" disabled>
                 </div>
                 <div class="myskills">
                     <div class="skills">
-                        <h6 class="text-heading-small">Expressjs</h6>
+                        <h6 class="text-heading-small">Express.js</h6>
                         <h6 class="text-heading-small">65%</h6>
                     </div>
                     <input type="range" min="1" max="100" value="65" disabled>
