--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@
         <div class="container">
             <form class="contact">
                 <div class="mail-name">
-                    <input id="inputname" type="text" min="1" max="30" placeholder="Your Name" required>
-                    <input id="inputemail" type="email" min="1" max="30" placeholder="Your Email" required>
+                    <input id="inputname" type="text" min="1" max="30" placeholder="Enter your name" required>
+                    <input id="inputemail" type="email" min="1" max="30" placeholder="Enter your email" required>
                 </div>
                 <div class="subject">
-                    <input id="inputsubject" type="text" placeholder="Subject" required>
+                    <input id="inputsubject" type="text" placeholder="Enter your subject" required>
                 </div>
                 <div class="massage">
-                    <textarea name="text" id="massage" cols="30" rows="5" placeholder="Massage" required></textarea>
+                    <textarea name="text" id="massage" cols="30" rows="5" placeholder="Enter your massage" required></textarea>
                 </div>
                 <button class="table-btn">Send Massage</button>
             </form>
